--- a/index.html
+++ b/index.html
@@ -3,6 +3,24 @@
 	<title>Crossing Aachen</title>
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+	<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/manifest.json">
+	<meta name="msapplication-TileColor" content="#fff200">
+	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+	<meta name="theme-color" content="#fff200">
 </head>
 <body>
 	<center>
@@ -12,45 +30,43 @@
 			<div class="aachen_text">Aachen</div>
 		</div>
 		<div class="date">
-			24. Mai 2017<br>
-			<span class="vvk">VVK startet am 18. April 2017</span>
+			30. Mai 2018<br>
 		</div>
 		<div class="kneipen_logos">
 			<a href="https://www.facebook.com/baerenhoehle.aachen/"><img class="kneipen_logo" src="img/logo_baehrenhoele.png" alt="baehrenhoele"></a>
 			<a href=""><img class="kneipen_logo" src="img/logo_eimer.png" alt="eimer"></a>
 			<a href="https://www.facebook.com/profile.php?id=100014245747068&fref=ts"><img class="kneipen_logo" src="img/logo_kaenguru.png" alt="känguru"></a>
 			<a href="https://www.facebook.com/motorbar/"><img class="kneipen_logo" src="img/logo_motorbar.png" alt="motorbar"></a>
-			<a href="https://www.facebook.com/symposion/"><img class="kneipen_logo" src="img/logo_symposion.png" alt="symposion"></a>
-			<a href="https://www.facebook.com/triangel.cisaw/"><img class="kneipen_logo" src="img/logo_triangel.png" alt="triangel"></a>
+			<!--a href="https://www.facebook.com/symposion/"><img class="kneipen_logo" src="img/logo_symposion.png" alt="symposion"></a-->
+			<a href=""><img class="kneipen_logo" src="img/logo_cafe18.png" alt="cafe18"></a>
+			<!--a href="https://www.facebook.com/triangel.cisaw/"><img class="kneipen_logo" src="img/logo_triangel.png" alt="triangel"></a-->
 		</div>
 		<div class="explanation">
 			<h1>WAS IST CROSSING AACHEN?</h1>
 
-			Crossing Aachen ist eine Party, die im Jahr 2004 von fünf Kneipen der Aachener Studentenwohnheime ins Leben gerufen wurde. Kernziel dieser Veranstaltung ist das feuchtfröhliche Wandern von einer Kneipe in die Nächste, was unser Motto »Von Theke zu Theke – 6 Kneipen, 1 Ziel« unterstreichen soll.
+			Crossing Aachen ist eine Party, die im Jahr 2004 von fünf Kneipen der Aachener Studentenwohnheime ins Leben gerufen wurde. Kernziel dieser Veranstaltung ist das feuchtfröhliche Wandern von einer Kneipe in die Nächste, was unser Motto »Von Theke zu Theke – 5 Kneipen, 1 Ziel« unterstreichen soll.
 
 			<h1>WIE ES FUNKTIONIERT</h1>
 
-			Man kauft einmalig eine Crossing-Aachen-Karte für 9€VVK bzw. 12€ Abendkasse mit 12 Abrissen (2 Abrisse pro Kneipe). Diese ist gleichzeitig eure Eintrittskarte in alle Kneipen, weshalb ihr sie am Eingang immer vorzeigen solltet.
+			Man kauft einmalig eine Crossing-Aachen-Karte für 10€VVK bzw. 12€ Abendkasse mit 10 Abrissen (2 Abrisse pro Kneipe). Diese ist gleichzeitig eure Eintrittskarte in alle Kneipen, weshalb ihr sie am Eingang immer vorzeigen solltet.
 			Gehen euch die Abrisse auf der Crossing-Karte aus, kauft ihr euch einfach eine Abrisskarte der betreffenden Kneipe.
 			Zur Orientierung: In jeder Kneipe ist ein Abriss ein Bier wert.
 
-			<h1>DIE SECHS GASTGEBER</h1>
+			<h1>DIE FÜNF GASTGEBER</h1>
 
-			Alle sechs Kneipen sind untereinander bequem zu Fuß zu erreichen. Im Durchschnitt liegen die Kneipen ca. 10 Fuß-Minuten auseinander.<br>
+			Alle fünf Kneipen sind untereinander bequem zu Fuß zu erreichen. Im Durchschnitt liegen die Kneipen ca. 10 Fuß-Minuten auseinander.<br>
 
 <pre>B&auml;hrenh&ouml;le
-Bärenstraße 5</pre>
+Bärenstraße 5 (Bärenwohnheim)</pre>
 <pre>Club im Eimer
 Rütscher Str. 121 (Türme/TvK)</pre>
 <pre>K&auml;nGuruh Bar
-Kullenhofstrasse 60</pre>
+Kullenhofstrasse 60 (Kullenhof)</pre>
 <pre>Club Motorbar
-Rütscher Str .155 (Türme/OPH)</pre>
-<pre>Symposion
-Turmstr. 1 (Hilton)</pre>
-<pre>Triangel
-Am Weißenberg 16 (SAW)</pre>
-
+Rütscher Str. 155 (Türme/OPH)</pre>
+<pre>Cafe18
+Ahornstraße 73 (Halifax)
+</pre>
 
 
 			In allen Kneipen werden ausschließlich Premium-Biere gezapft.
@@ -60,24 +76,29 @@ Am Weißenberg 16 (SAW)</pre>
 
 			<pre>
 22 – 23 Uhr
-
+Bährenhöhle
+Eimer
+KänGuruh
 
 23 – 00 Uhr
-
+Motorbar
+Cafe18
 
 00 – 01 Uhr
-
+Bährenhöhle
+Eimer
+KänGuruh
 
 01 – 02 Uhr
-
-
+Motorbar
+Cafe18
 			</pre>
 
 		</div>
 		<div class="explanation">
 			<h1>UND DANN?</h1>
 
-			Wenn wir danach nicht total pleite sind und Ihr vielleicht eine neue Stammkneipe gefunden habt, gibt es 2018 natürlich eine Wiederholung.
+			Wenn wir danach nicht total pleite sind und Ihr vielleicht eine neue Stammkneipe gefunden habt, gibt es 2019 natürlich eine Wiederholung.
 		</div>
 	</center>
 </body>
