--- a/index.html
+++ b/index.html
@@ -30,44 +30,61 @@
 			<div class="aachen_text">Aachen</div>
 		</div>
 		<div class="date">
-			30. Mai 2018<br>
+			29. Mai 2019<br>
 		</div>
 		<div class="kneipen_logos">
 			<a href="https://www.facebook.com/baerenhoehle.aachen/"><img class="kneipen_logo" src="img/logo_baehrenhoele.png" alt="baehrenhoele"></a>
 			<a href=""><img class="kneipen_logo" src="img/logo_eimer.png" alt="eimer"></a>
 			<a href="https://www.facebook.com/profile.php?id=100014245747068&fref=ts"><img class="kneipen_logo" src="img/logo_kaenguru.png" alt="känguru"></a>
 			<a href="https://www.facebook.com/motorbar/"><img class="kneipen_logo" src="img/logo_motorbar.png" alt="motorbar"></a>
-			<!--a href="https://www.facebook.com/symposion/"><img class="kneipen_logo" src="img/logo_symposion.png" alt="symposion"></a-->
-			<a href=""><img class="kneipen_logo" src="img/logo_cafe18.png" alt="cafe18"></a>
+			<a href="https://www.facebook.com/symposion/"><img class="kneipen_logo" src="img/logo_symposion.png" alt="symposion"></a>
+			<!--a href=""><img class="kneipen_logo" src="img/logo_cafe18.png" alt="cafe18"></a-->
 			<!--a href="https://www.facebook.com/triangel.cisaw/"><img class="kneipen_logo" src="img/logo_triangel.png" alt="triangel"></a-->
 		</div>
 		<div class="explanation">
 			<h1>WAS IST CROSSING AACHEN?</h1>
 
-			Crossing Aachen ist eine Party, die im Jahr 2004 von fünf Kneipen der Aachener Studentenwohnheime ins Leben gerufen wurde. Kernziel dieser Veranstaltung ist das feuchtfröhliche Wandern von einer Kneipe in die Nächste, was unser Motto »Von Theke zu Theke – 5 Kneipen, 1 Ziel« unterstreichen soll.
+			Crossing Aachen ist eine Party, die im Jahr 2004 von fünf Kneipen der Aachener Studentenwohnheime ins Leben gerufen wurde. Kernziel dieser Veranstaltung ist das feuchtfröhliche Wandern von einer Kneipe in die Nächste, was unser Motto »Von Theke zu Theke – 9 Kneipen, 1 Ziel« unterstreichen soll.
 
 			<h1>WIE ES FUNKTIONIERT</h1>
 
-			Man kauft einmalig eine Crossing-Aachen-Karte für 10€VVK bzw. 12€ Abendkasse mit 10 Abrissen (2 Abrisse pro Kneipe). Diese ist gleichzeitig eure Eintrittskarte in alle Kneipen, weshalb ihr sie am Eingang immer vorzeigen solltet.
-			Gehen euch die Abrisse auf der Crossing-Karte aus, kauft ihr euch einfach eine Abrisskarte der betreffenden Kneipe.
+			Dieses Jahr werden auf grund der vielen Bars zwei Routen angeboten. Die Rote und die Gelbe Route.
+
+			Man kauft einmalig eine Crossing-Aachen-Karte für 10€VVK bzw. 12€ Abendkasse mit 8 Abrissen bzw. 10 Abrissen (2 Abrisse pro Kneipe). Diese ist gleichzeitig eure Eintrittskarte in <b>alle</b> Kneipen, weshalb ihr sie am Eingang immer vorzeigen solltet.
+			Gehen euch die Abrisse auf der Crossing-Karte aus oder Ihr kommt in eine Bar der anderen Route, kauft ihr euch einfach eine Abrisskarte der betreffenden Kneipe.
 			Zur Orientierung: In jeder Kneipe ist ein Abriss ein Bier wert.
 
-			<h1>DIE FÜNF GASTGEBER</h1>
+			<h1>DIE ZWEI ROUTEN</h1>
+			<h2>Die Gelbe Route</h2>
+			In der gelbe Route sind folgende Bars, die Ihr bequem zu Fuß zu erreichen könnt. Im Durchschnitt liegen die Kneipen ca. 10 Fuß-Minuten auseinander.<br>
 
-			Alle fünf Kneipen sind untereinander bequem zu Fuß zu erreichen. Im Durchschnitt liegen die Kneipen ca. 10 Fuß-Minuten auseinander.<br>
+<pre>Club Motorbar
+Rütscher Str. 155 (Türme/OPH)</pre>
+<pre>Symposium
+Turmstr. 1 (Hilton)</pre>
+<pre>KaWo Bar
+Kastanienweg 6 (KaWo)</pre>
+<pre>K&auml;nGuruh Bar
+Kullenhofstrasse 60 (Kullenhof)</pre>
+
+Auf dieser Route werden 0.3l Bier ausgeschänkt.
+
+			<h2>Die Rote Route</h2>
+			Auf der rote Route sind folgende Bars, die Ihr auch bequem zu Fuß zu erreichen könnt. Im Durchschnitt liegen auch diese Kneipen ca. 10 Fuß-Minuten auseinander.<br>
 
 <pre>B&auml;hrenh&ouml;le
 Bärenstraße 5 (Bärenwohnheim)</pre>
+<pre>K2-Bar
+Kastanienweg 23 (KaWo 2)</pre>
 <pre>Club im Eimer
 Rütscher Str. 121 (Türme/TvK)</pre>
-<pre>K&auml;nGuruh Bar
-Kullenhofstrasse 60 (Kullenhof)</pre>
-<pre>Club Motorbar
-Rütscher Str. 155 (Türme/OPH)</pre>
-<pre>Cafe18
-Ahornstraße 73 (Halifax)
+<pre>Mühle
+Mattschö-Moll-Weg 4-28 (Gebrannte Mühle)</pre>
+<pre>FaHo-Bierkeller
+Hainbuchenstr. 6 (FaHo)
 </pre>
 
+Auf dieser Route werden 0.2l Bier ausgeschänkt.
 
 			In allen Kneipen werden ausschließlich Premium-Biere gezapft.
 		</div>
@@ -75,30 +92,40 @@ Ahornstraße 73 (Halifax)
 			<h1>HAPPY HOURS</h1>
 
 			<pre>
-22 – 23 Uhr
-Bährenhöhle
-Eimer
+21 – 22 Uhr
 KänGuruh
+Symposium
+K2-Bar
+Eimer
+Mühle
+
+22 – 23 Uhr
+Motorbar
+KaWo Bar
+Bährenhöhle
+FaHo-Bierkeller
 
 23 – 00 Uhr
-Motorbar
-Cafe18
+KänGuruh
+Symposium
+K2-Bar
+Eimer
+Mühle
 
 00 – 01 Uhr
-Bährenhöhle
-Eimer
-KänGuruh
-
-01 – 02 Uhr
 Motorbar
-Cafe18
-			</pre>
+KaWo Bar
+Bährenhöhle
+FaHo-Bierkeller
 
+01:30 - 2:30 Uhr
+überall
+			</pre>
 		</div>
 		<div class="explanation">
 			<h1>UND DANN?</h1>
 
-			Wenn wir danach nicht total pleite sind und Ihr vielleicht eine neue Stammkneipe gefunden habt, gibt es 2019 natürlich eine Wiederholung.
+			Wenn wir danach nicht total pleite sind und Ihr vielleicht eine neue Stammkneipe gefunden habt, gibt es 2020 natürlich eine Wiederholung.
 		</div>
 	</center>
 </body>
