added new logos

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 			<a href="https://www.facebook.com/profile.php?id=100014245747068&fref=ts"><img class="kneipen_logo" src="img/logo_kaenguru.png" alt="känguru"></a>
 			<a href="https://www.facebook.com/motorbar/"><img class="kneipen_logo" src="img/logo_motorbar.png" alt="motorbar"></a>
 			<a href="https://www.facebook.com/symposion/"><img class="kneipen_logo" src="img/logo_symposion.png" alt="symposion"></a>
+			<a href="https://www.kawo2.rwth-aachen.de/de/bar/"><img class="kneipen_logo" src="img/logo_K2.png" alt="K2-Bar"></a>
+			<a href="https://www.facebook.com/KaWoBar1977/"><img class="kneipen_logo" src="img/logo_kawo_bar.png" alt="KaWo Bar"></a>
+			<a href="https://www.facebook.com/groups/802268483308687/"><img class="kneipen_logo" src="img/logo_muehle.png" alt="Mühle"></a>
+			<a href="https://www.facebook.com/groups/1380905832134324/"><img class="kneipen_logo" src="img/logo_faho.png" alt="faho"></a>
 			<!--a href=""><img class="kneipen_logo" src="img/logo_cafe18.png" alt="cafe18"></a-->
 			<!--a href="https://www.facebook.com/triangel.cisaw/"><img class="kneipen_logo" src="img/logo_triangel.png" alt="triangel"></a-->
 		</div>
