--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div class="aachen_text">Aachen</div>
 		</div>
 		<div class="date">
-			29. Mai 2019<br>
+			20. Mai 2020<br>
 		</div>
 		<div class="kneipen_logos">
 			<a href="https://www.facebook.com/baerenhoehle.aachen/"><img class="kneipen_logo" src="img/logo_baehrenhoele.png" alt="baehrenhoele"></a>
@@ -38,9 +38,9 @@
 			<a href="https://www.facebook.com/profile.php?id=100014245747068&fref=ts"><img class="kneipen_logo" src="img/logo_kaenguru.png" alt="känguru"></a>
 			<a href="https://www.facebook.com/motorbar/"><img class="kneipen_logo" src="img/logo_motorbar.png" alt="motorbar"></a>
 			<a href="https://www.facebook.com/symposion/"><img class="kneipen_logo" src="img/logo_symposion.png" alt="symposion"></a>
-			<a href="https://www.kawo2.rwth-aachen.de/de/bar/"><img class="kneipen_logo" src="img/logo_K2.png" alt="K2-Bar"></a>
-			<a href="https://www.facebook.com/KaWoBar1977/"><img class="kneipen_logo" src="img/logo_kawo_bar.png" alt="KaWo Bar"></a>
-			<a href="https://www.facebook.com/groups/802268483308687/"><img class="kneipen_logo" src="img/logo_muehle.png" alt="Mühle"></a>
+			<!--a href="https://www.kawo2.rwth-aachen.de/de/bar/"><img class="kneipen_logo" src="img/logo_K2.png" alt="K2-Bar"></a-->
+			<!--a href="https://www.facebook.com/KaWoBar1977/"><img class="kneipen_logo" src="img/logo_kawo_bar.png" alt="KaWo Bar"></a-->
+			<!--a href="https://www.facebook.com/groups/802268483308687/"><img class="kneipen_logo" src="img/logo_muehle.png" alt="Mühle"></a-->
 			<a href="https://www.facebook.com/groups/1380905832134324/"><img class="kneipen_logo" src="img/logo_faho.png" alt="faho"></a>
 			<!--a href=""><img class="kneipen_logo" src="img/logo_cafe18.png" alt="cafe18"></a-->
 			<!--a href="https://www.facebook.com/triangel.cisaw/"><img class="kneipen_logo" src="img/logo_triangel.png" alt="triangel"></a-->
@@ -48,10 +48,16 @@
 		<div class="explanation">
 			<h1>WAS IST CROSSING AACHEN?</h1>
 
-			Crossing Aachen ist eine Party, die im Jahr 2004 von fünf Kneipen der Aachener Studentenwohnheime ins Leben gerufen wurde. Kernziel dieser Veranstaltung ist das feuchtfröhliche Wandern von einer Kneipe in die Nächste, was unser Motto »Von Theke zu Theke – 9 Kneipen, 1 Ziel« unterstreichen soll.
+			Crossing Aachen ist eine Party, die im Jahr 2004 von fünf Kneipen der Aachener Studentenwohnheime ins Leben gerufen wurde. Kernziel dieser Veranstaltung ist das feuchtfröhliche Wandern von einer Kneipe in die Nächste, was unser Motto »Von Theke zu Theke – 6 Kneipen, 1 Ziel« unterstreichen soll.
 
 			<h1>WIE ES FUNKTIONIERT</h1>
 
+			Man kauft einmalig eine Crossing-Aachen-Karte für 10€VVK bzw. 12€ Abendkasse mit 10 Abrissen (2 Abrisse pro Kneipe). Diese ist gleichzeitig eure Eintrittskarte in alle Kneipen, weshalb ihr sie am Eingang immer vorzeigen solltet.
+			Gehen euch die Abrisse auf der Crossing-Karte aus, kauft ihr euch einfach eine Abrisskarte der betreffenden Kneipe.
+
+			In diesem Jahr wird es in jeder Kneipe ein B&auml;cherpfand von 1€ geben, dieses ist in jeder Bar in Bar zu entrichten.
+
+			<!--
 			Dieses Jahr werden auf grund der vielen Bars zwei Routen angeboten. Die Rote und die Gelbe Route.
 
 			Man kauft einmalig eine Crossing-Aachen-Karte für 8€VVK bzw. 10€ Abendkasse mit 8 Abrissen bzw. 10 Abrissen (2 Abrisse pro Kneipe). Diese ist gleichzeitig eure Eintrittskarte in <b>alle</b> Kneipen, weshalb ihr sie am Eingang immer vorzeigen solltet.
@@ -62,33 +68,35 @@
 			<h2>Die Gelbe Route</h2>
 			In der gelbe Route sind folgende Bars, die Ihr bequem zu Fuß zu erreichen könnt. Im Durchschnitt liegen die Kneipen ca. 10 Fuß-Minuten auseinander.<br>
 
-<pre>Club Motorbar
-Rütscher Str. 155 (Türme/OPH)</pre>
-<pre>Symposium
-Turmstr. 1 (Hilton)</pre>
-<pre>KaWo Bar
-Kastanienweg 6 (KaWo)</pre>
-<pre>K&auml;nGuruh Bar
-Kullenhofstrasse 60 (Kullenhof)</pre>
 
 Auf dieser Route werden 0.3l Bier ausgeschänkt.
 
 			<h2>Die Rote Route</h2>
-			Auf der rote Route sind folgende Bars, die Ihr auch bequem zu Fuß zu erreichen könnt. Im Durchschnitt liegen auch diese Kneipen ca. 10 Fuß-Minuten auseinander.<br>
+			Auf der rote Route sind folgende Bars, die Ihr auch bequem zu Fuß zu erreichen könnt. Im Durchschnitt liegen auch diese Kneipen ca. 10 Fuß-Minuten auseinander.<br-->
 
+			<h1>DIE FÜNF GASTGEBER</h1>
+
+			Alle sechs Kneipen sind untereinander bequem zu Fuß zu erreichen. Im Durchschnitt liegen die Kneipen ca. 10 Fuß-Minuten auseinander.<br>
+
+<pre>Club Motorbar
+Rütscher Str. 155 (Türme/OPH)</pre>
+<pre>Symposium
+Turmstr. 1 (Hilton)</pre>
+<!--pre>KaWo Bar
+Kastanienweg 6 (KaWo)</pre-->
+<pre>K&auml;nGuruh Bar
+Kullenhofstrasse 60 (Kullenhof)</pre>
 <pre>B&auml;hrenh&ouml;le
 Bärenstraße 5 (Bärenwohnheim)</pre>
-<pre>K2-Bar
-Kastanienweg 23 (KaWo 2)</pre>
+<!--pre>K2-Bar
+Kastanienweg 23 (KaWo 2)</pre-->
 <pre>Club im Eimer
 Rütscher Str. 121 (Türme/TvK)</pre>
-<pre>Mühle
-Mattschö-Moll-Weg 4-28 (Gebrannte Mühle)</pre>
+<!--pre>Mühle
+Mattschö-Moll-Weg 4-28 (Gebrannte Mühle)</pre-->
 <pre>FaHo-Bierkeller
 Hainbuchenstr. 6 (FaHo)
 </pre>
-
-Auf dieser Route werden 0.2l Bier ausgeschänkt.
 
 			In allen Kneipen werden ausschließlich Premium-Biere gezapft.
 		</div>
@@ -96,30 +104,24 @@ Auf dieser Route werden 0.2l Bier ausgeschänkt.
 			<h1>HAPPY HOURS</h1>
 			<pre>
 21 – 22 Uhr
-KänGuruh
-Symposium
-K2-Bar
+Bährenhöhle
 Eimer
-Mühle
+KänGuruh
 
 22 – 23 Uhr
-Motorbar
-KaWo Bar
-Bährenhöhle
 FaHo-Bierkeller
+Motorbar
+Symposium
 
 23 – 00 Uhr
-KänGuruh
-Symposium
-K2-Bar
+Bährenhöhle
 Eimer
-Mühle
+KänGuruh
 
 00 – 01 Uhr
-Motorbar
-KaWo Bar
-Bährenhöhle
 FaHo-Bierkeller
+Motorbar
+Symposium
 
 01:30 - 2:30 Uhr
 überall
@@ -128,7 +130,7 @@ FaHo-Bierkeller
 		<div class="explanation">
 			<h1>UND DANN?</h1>
 
-			Wenn wir danach nicht total pleite sind und Ihr vielleicht eine neue Stammkneipe gefunden habt, gibt es 2020 natürlich eine Wiederholung.
+			Wenn wir danach nicht total pleite sind und Ihr vielleicht eine neue Stammkneipe gefunden habt, gibt es 2021 natürlich eine Wiederholung.
 		</div>
 	</center>
 </body>
