--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			Man kauft einmalig eine Crossing-Aachen-Karte für 10€VVK bzw. 12€ Abendkasse mit 10 Abrissen (2 Abrisse pro Kneipe). Diese ist gleichzeitig eure Eintrittskarte in alle Kneipen, weshalb ihr sie am Eingang immer vorzeigen solltet.
 			Gehen euch die Abrisse auf der Crossing-Karte aus, kauft ihr euch einfach eine Abrisskarte der betreffenden Kneipe.
 
-			In diesem Jahr wird es in jeder Kneipe ein B&auml;cherpfand von 1€ geben, dieses ist in jeder Bar in Bar zu entrichten.
+			In diesem Jahr wird es in jeder Kneipe ein Becherpfand von 1€ geben, dieses ist in jeder Bar in Bar zu entrichten.
 
 			<!--
 			Dieses Jahr werden auf grund der vielen Bars zwei Routen angeboten. Die Rote und die Gelbe Route.
@@ -74,13 +74,13 @@ Auf dieser Route werden 0.3l Bier ausgeschänkt.
 			<h2>Die Rote Route</h2>
 			Auf der rote Route sind folgende Bars, die Ihr auch bequem zu Fuß zu erreichen könnt. Im Durchschnitt liegen auch diese Kneipen ca. 10 Fuß-Minuten auseinander.<br-->
 
-			<h1>DIE FÜNF GASTGEBER</h1>
+			<h1>DIE SECHS GASTGEBER</h1>
 
 			Alle sechs Kneipen sind untereinander bequem zu Fuß zu erreichen. Im Durchschnitt liegen die Kneipen ca. 10 Fuß-Minuten auseinander.<br>
 
 <pre>Club Motorbar
 Rütscher Str. 155 (Türme/OPH)</pre>
-<pre>Symposium
+<pre>Symposion
 Turmstr. 1 (Hilton)</pre>
 <!--pre>KaWo Bar
 Kastanienweg 6 (KaWo)</pre-->
@@ -111,7 +111,7 @@ KänGuruh
 22 – 23 Uhr
 FaHo-Bierkeller
 Motorbar
-Symposium
+Symposion
 
 23 – 00 Uhr
 Bährenhöhle
@@ -121,7 +121,7 @@ KänGuruh
 00 – 01 Uhr
 FaHo-Bierkeller
 Motorbar
-Symposium
+Symposion
 
 01:30 - 2:30 Uhr
 überall
