--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			20. Mai 2020<br>
 		</div>
 		<div class="kneipen_logos">
-			<a href="https://www.facebook.com/baerenhoehle.aachen/"><img class="kneipen_logo" src="img/logo_baehrenhoele.png" alt="baehrenhoele"></a>
+			<a href="https://www.facebook.com/baerenhoehle.aachen/"><img class="kneipen_logo" src="img/logo_baerenhoele.png" alt="baerenhoele"></a>
 			<a href=""><img class="kneipen_logo" src="img/logo_eimer.png" alt="eimer"></a>
 			<a href="https://www.facebook.com/profile.php?id=100014245747068&fref=ts"><img class="kneipen_logo" src="img/logo_kaenguru.png" alt="känguru"></a>
 			<a href="https://www.facebook.com/motorbar/"><img class="kneipen_logo" src="img/logo_motorbar.png" alt="motorbar"></a>
@@ -86,7 +86,7 @@ Turmstr. 1 (Hilton)</pre>
 Kastanienweg 6 (KaWo)</pre-->
 <pre>K&auml;nGuruh Bar
 Kullenhofstrasse 60 (Kullenhof)</pre>
-<pre>B&auml;hrenh&ouml;le
+<pre>B&auml;renh&ouml;le
 Bärenstraße 5 (Bärenwohnheim)</pre>
 <!--pre>K2-Bar
 Kastanienweg 23 (KaWo 2)</pre-->
@@ -104,7 +104,7 @@ Hainbuchenstr. 6 (FaHo)
 			<h1>HAPPY HOURS</h1>
 			<pre>
 21 – 22 Uhr
-Bährenhöhle
+Bärenhöhle
 Eimer
 KänGuruh
 
@@ -114,7 +114,7 @@ Motorbar
 Symposion
 
 23 – 00 Uhr
-Bährenhöhle
+Bärenhöhle
 Eimer
 KänGuruh
 
