--- a/index.html
+++ b/index.html
@@ -30,32 +30,32 @@
 			<div class="aachen_text">Aachen</div>
 		</div>
 		<div class="date">
-			12. Mai 2021<br>
+			7. Juni 2023<br>
 		</div>
 		<div class="kneipen_logos">
 			<a href="https://www.facebook.com/baerenhoehle.aachen/"><img class="kneipen_logo" src="img/logo_baerenhoele.png" alt="baerenhoele"></a>
-			<a href=""><img class="kneipen_logo" src="img/logo_eimer.png" alt="eimer"></a>
-			<a href="https://www.facebook.com/profile.php?id=100014245747068&fref=ts"><img class="kneipen_logo" src="img/logo_kaenguru.png" alt="känguru"></a>
+			<!--a href=""><img class="kneipen_logo" src="img/logo_eimer.png" alt="eimer"></a-->
+			<!--a href="https://www.facebook.com/profile.php?id=100014245747068&fref=ts"><img class="kneipen_logo" src="img/logo_kaenguru.png" alt="känguru"></a-->
 			<a href="https://www.facebook.com/motorbar/"><img class="kneipen_logo" src="img/logo_motorbar.png" alt="motorbar"></a>
-			<a href="https://www.facebook.com/symposion/"><img class="kneipen_logo" src="img/logo_symposion.png" alt="symposion"></a>
+			<!--a href="https://www.facebook.com/symposion/"><img class="kneipen_logo" src="img/logo_symposion.png" alt="symposion"></a-->
 			<!--a href="https://www.kawo2.rwth-aachen.de/de/bar/"><img class="kneipen_logo" src="img/logo_K2.png" alt="K2-Bar"></a-->
 			<!--a href="https://www.facebook.com/KaWoBar1977/"><img class="kneipen_logo" src="img/logo_kawo_bar.png" alt="KaWo Bar"></a-->
 			<!--a href="https://www.facebook.com/groups/802268483308687/"><img class="kneipen_logo" src="img/logo_muehle.png" alt="Mühle"></a-->
 			<a href="https://www.facebook.com/groups/1380905832134324/"><img class="kneipen_logo" src="img/logo_faho.png" alt="faho"></a>
 			<!--a href=""><img class="kneipen_logo" src="img/logo_cafe18.png" alt="cafe18"></a-->
-			<!--a href="https://www.facebook.com/triangel.cisaw/"><img class="kneipen_logo" src="img/logo_triangel.png" alt="triangel"></a-->
+			<a href="https://www.facebook.com/triangel.cisaw/"><img class="kneipen_logo" src="img/logo_triangel.png" alt="triangel"></a>
 		</div>
 		<div class="explanation">
 			<h1>WAS IST CROSSING AACHEN?</h1>
 
-			Crossing Aachen ist eine Party, die im Jahr 2004 von fünf Kneipen der Aachener Studentenwohnheime ins Leben gerufen wurde. Kernziel dieser Veranstaltung ist das feuchtfröhliche Wandern von einer Kneipe in die Nächste, was unser Motto »Von Theke zu Theke – 6 Kneipen, 1 Ziel« unterstreichen soll.
+			Crossing Aachen ist eine Party, die im Jahr 2004 von fünf Kneipen der Aachener Studentenwohnheime ins Leben gerufen wurde. Kernziel dieser Veranstaltung ist das feuchtfröhliche Wandern von einer Kneipe in die Nächste, was unser Motto »Von Theke zu Theke – 4 Kneipen, 1 Ziel« unterstreichen soll.
 
 			<h1>WIE ES FUNKTIONIERT</h1>
 
-			Man kauft einmalig eine Crossing-Aachen-Karte für 10€VVK bzw. 12€ Abendkasse mit 10 Abrissen (2 Abrisse pro Kneipe). Diese ist gleichzeitig eure Eintrittskarte in alle Kneipen, weshalb ihr sie am Eingang immer vorzeigen solltet.
+			Man kauft einmalig eine Crossing-Aachen-Karte für 12€VVK bzw. 14€ Abendkasse mit 8 Abrissen (2 Abrisse pro Kneipe). Diese ist gleichzeitig eure Eintrittskarte in alle Kneipen, weshalb ihr sie am Eingang immer vorzeigen solltet.
 			Gehen euch die Abrisse auf der Crossing-Karte aus, kauft ihr euch einfach eine Abrisskarte der betreffenden Kneipe.
 
-			In diesem Jahr wird es in jeder Kneipe ein Becherpfand von 1€ geben, dieses ist in jeder Bar in Bar zu entrichten.
+			<!--In diesem Jahr wird es in jeder Kneipe ein Becherpfand von 2€ geben, dieses ist in jeder Bar in Bar zu entrichten.-->
 
 			<!--
 			Dieses Jahr werden auf grund der vielen Bars zwei Routen angeboten. Die Rote und die Gelbe Route.
@@ -74,28 +74,31 @@ Auf dieser Route werden 0.3l Bier ausgeschänkt.
 			<h2>Die Rote Route</h2>
 			Auf der rote Route sind folgende Bars, die Ihr auch bequem zu Fuß zu erreichen könnt. Im Durchschnitt liegen auch diese Kneipen ca. 10 Fuß-Minuten auseinander.<br-->
 
-			<h1>DIE SECHS GASTGEBER</h1>
+			<h1>DIE VIER GASTGEBER</h1>
 
-			Alle sechs Kneipen sind untereinander bequem zu Fuß zu erreichen. Im Durchschnitt liegen die Kneipen ca. 10 Fuß-Minuten auseinander.<br>
+			Alle vier Kneipen sind untereinander bequem zu Fuß zu erreichen. Im Durchschnitt liegen die Kneipen ca. 10 Fuß-Minuten auseinander.<br>
 
 <pre>Club Motorbar
 Rütscher Str. 155 (Türme/OPH)</pre>
-<pre>Symposion
-Turmstr. 1 (Hilton)</pre>
+<!--pre>Symposion
+Turmstr. 1 (Hilton)</pre-->
 <!--pre>KaWo Bar
 Kastanienweg 6 (KaWo)</pre-->
-<pre>K&auml;nGuruh Bar
-Kullenhofstrasse 60 (Kullenhof)</pre>
+<!--pre>K&auml;nGuruh Bar
+Kullenhofstrasse 60 (Kullenhof)</pre-->
 <pre>B&auml;renh&ouml;le
 Bärenstraße 5 (Bärenwohnheim)</pre>
 <!--pre>K2-Bar
 Kastanienweg 23 (KaWo 2)</pre-->
-<pre>Club im Eimer
-Rütscher Str. 121 (Türme/TvK)</pre>
+<!--pre>Club im Eimer
+Rütscher Str. 121 (Türme/TvK)</pre-->
 <!--pre>Mühle
 Mattschö-Moll-Weg 4-28 (Gebrannte Mühle)</pre-->
 <pre>FaHo-Bierkeller
 Hainbuchenstr. 6 (FaHo)
+</pre>
+<pre>Triangel
+Am Weissenberg. 16-18 (Am Weissenberg)
 </pre>
 
 			In allen Kneipen werden ausschließlich Premium-Biere gezapft.
@@ -104,24 +107,12 @@ Hainbuchenstr. 6 (FaHo)
 			<h1>HAPPY HOURS</h1>
 			<pre>
 21 – 22 Uhr
-Bärenhöhle
-Eimer
-KänGuruh
 
 22 – 23 Uhr
-FaHo-Bierkeller
-Motorbar
-Symposion
 
 23 – 00 Uhr
-Bärenhöhle
-Eimer
-KänGuruh
 
 00 – 01 Uhr
-FaHo-Bierkeller
-Motorbar
-Symposion
 
 01:30 - 2:30 Uhr
 überall
@@ -130,7 +121,7 @@ Symposion
 		<div class="explanation">
 			<h1>UND DANN?</h1>
 
-			Wenn wir danach nicht total pleite sind und Ihr vielleicht eine neue Stammkneipe gefunden habt, gibt es 2021 natürlich eine Wiederholung.
+			Wenn wir danach nicht total pleite sind und Ihr vielleicht eine neue Stammkneipe gefunden habt, gibt es 2024 natürlich eine Wiederholung.
 		</div>
 	</center>
 </body>
