happy hours 2023; new url for triangel

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<!--a href="https://www.facebook.com/groups/802268483308687/"><img class="kneipen_logo" src="img/logo_muehle.png" alt="Mühle"></a-->
 			<a href="https://www.facebook.com/groups/1380905832134324/"><img class="kneipen_logo" src="img/logo_faho.png" alt="faho"></a>
 			<!--a href=""><img class="kneipen_logo" src="img/logo_cafe18.png" alt="cafe18"></a-->
-			<a href="https://www.facebook.com/triangel.cisaw/"><img class="kneipen_logo" src="img/logo_triangel.png" alt="triangel"></a>
+			<a href="https://instagram.com/triangel_saw?igshid=YmMyMTA2M2Y="><img class="kneipen_logo" src="img/logo_triangel.png" alt="triangel"></a>
 		</div>
 		<div class="explanation">
 			<h1>WAS IST CROSSING AACHEN?</h1>
@@ -107,14 +107,22 @@ Am Weissenberg. 16-18 (Am Weissenberg)
 			<h1>HAPPY HOURS</h1>
 			<pre>
 21 – 22 Uhr
+Faho
+Triangel
 
 22 – 23 Uhr
+Bärenhöle
+Motorbar
 
 23 – 00 Uhr
+Faho
+Triangel
 
 00 – 01 Uhr
+Bärenhöle
+Motorbar
 
-01:30 - 2:30 Uhr
+01:30 - 2:00 Uhr
 überall
 			</pre>
 		</div>
