--- a/index.html
+++ b/index.html
@@ -107,20 +107,20 @@ Am Weissenberg. 16-18 (Am Weissenberg)
 			<h1>HAPPY HOURS</h1>
 			<pre>
 21 – 22 Uhr
-Faho
-Triangel
+Faho       Heino | Above | Sex on the Beach
+Triangel   Strawberry Fusion | Vodka-E
 
 22 – 23 Uhr
-Bärenhöle
-Motorbar
+Bärenhöle  Gin Tonic | Rum Cola
+Motorbar   2 Jägermeister | 2 Berliner Luft
 
 23 – 00 Uhr
-Faho
-Triangel
+Faho       Heino | Above | Sex on the Beach
+Triangel   Strawberry Fusion | Vodka-E
 
 00 – 01 Uhr
-Bärenhöle
-Motorbar
+Bärenhöle  Gin Tonic | Rum Cola
+Motorbar   2 Jägermeister | 2 Berliner Luft
 
 01:30 - 2:00 Uhr
 überall
