--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div class="aachen_text">Aachen</div>
 		</div>
 		<div class="date">
-			7. Juni 2023<br>
+			Vormerken: 8. Mai 2024<br>
 		</div>
 		<div class="kneipen_logos">
 			<a href="https://www.facebook.com/baerenhoehle.aachen/"><img class="kneipen_logo" src="img/logo_baerenhoele.png" alt="baerenhoele"></a>
