--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Am Weissenberg. 16-18 (Am Weissenberg)
 			<h1>HAPPY HOURS</h1>
 			<pre>
 21 – 22 Uhr
-Faho       Heino | Above | Sex on the Beach
+Faho               Heino | Sex on the Beach
 Triangel        Strawberry Fusion | Vodka-E
 
 22 – 23 Uhr
@@ -115,7 +115,7 @@ Bärenhöle              Gin Tonic | Rum Cola
 Motorbar   2 Jägermeister | 2 Berliner Luft
 
 23 – 00 Uhr
-Faho       Heino | Above | Sex on the Beach
+Faho               Heino | Sex on the Beach
 Triangel        Strawberry Fusion | Vodka-E
 
 00 – 01 Uhr
@@ -129,7 +129,7 @@ Motorbar   2 Jägermeister | 2 Berliner Luft
 		<div class="explanation">
 			<h1>UND DANN?</h1>
 
-			Wenn wir danach nicht total pleite sind und Ihr vielleicht eine neue Stammkneipe gefunden habt, gibt es 2024 natürlich eine Wiederholung.
+			Wenn wir danach nicht total pleite sind und Ihr vielleicht eine neue Stammkneipe gefunden habt, gibt es 2025 natürlich eine Wiederholung.
 		</div>
 	</center>
 </body>
