--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div class="aachen_text">Aachen</div>
 		</div>
 		<div class="date">
-			Vormerken: 8. Mai 2024<br>
+			8. Mai 2024<br>
 		</div>
 		<div class="kneipen_logos">
 			<a href="https://www.facebook.com/baerenhoehle.aachen/"><img class="kneipen_logo" src="img/logo_baerenhoele.png" alt="baerenhoele"></a>
@@ -112,7 +112,7 @@ Triangel        Strawberry Fusion | Vodka-E
 
 22 – 23 Uhr
 Bärenhöle              Gin Tonic | Rum Cola
-Motorbar   2 Jägermeister | 2 Berliner Luft
+Motorbar              Flieger | Vodka Lemon
 
 23 – 00 Uhr
 Faho               Heino | Sex on the Beach
@@ -120,7 +120,7 @@ Triangel        Strawberry Fusion | Vodka-E
 
 00 – 01 Uhr
 Bärenhöle              Gin Tonic | Rum Cola
-Motorbar   2 Jägermeister | 2 Berliner Luft
+Motorbar              Flieger | Vodka Lemon
 
 01:30 - 2:00 Uhr
 überall
