--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Turmstr. 1 (Hilton)</pre-->
 Kastanienweg 6 (KaWo)</pre-->
 <!--pre>K&auml;nGuruh Bar
 Kullenhofstrasse 60 (Kullenhof)</pre-->
-<pre>B&auml;renh&ouml;le
+<pre>B&auml;renh&ouml;hle
 Bärenstraße 5 (Bärenwohnheim)</pre>
 <!--pre>K2-Bar
 Kastanienweg 23 (KaWo 2)</pre-->
@@ -107,20 +107,20 @@ Am Weissenberg. 16-18 (Am Weissenberg)
 			<h1>HAPPY HOURS</h1>
 			<pre>
 21 – 22 Uhr
-Faho               Heino | Sex on the Beach
-Triangel        Strawberry Fusion | Vodka-E
+Faho                     Heino | Sex on the Beach
+Triangel              Strawberry Fusion | Vodka-E
 
 22 – 23 Uhr
-Bärenhöle              Gin Tonic | Rum Cola
-Motorbar              Flieger | Vodka Lemon
+Bärenhöhle   Beer Specials | Gin Tonic | Rum Cola
+Motorbar                    Flieger | Vodka Lemon
 
 23 – 00 Uhr
-Faho               Heino | Sex on the Beach
-Triangel        Strawberry Fusion | Vodka-E
+Faho                     Heino | Sex on the Beach
+Triangel              Strawberry Fusion | Vodka-E
 
 00 – 01 Uhr
-Bärenhöle              Gin Tonic | Rum Cola
-Motorbar              Flieger | Vodka Lemon
+Bärenhöhle   Beer Specials | Gin Tonic | Rum Cola
+Motorbar                    Flieger | Vodka Lemon
 
 01:30 - 2:00 Uhr
 überall
